Bug 455395 - Tinted color is not applied to window titles if the color scheme doesn't define header colors
Summary: Tinted color is not applied to window titles if the color scheme doesn't defi...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_colors (other bugs)
Version First Reported In: 5.25.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-16 11:05 UTC by popov895
Modified: 2022-07-05 18:10 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25.3
Sentry Crash Report:


Attachments
Window title without tinted color (210.56 KB, image/png)
2022-06-16 11:05 UTC, popov895
Details
Color scheme without header and with tinted color feature (2.70 KB, text/plain)
2022-06-16 11:06 UTC, popov895
Details
kdeglobals (4.18 KB, text/plain)
2022-06-16 11:07 UTC, popov895
Details

Note You need to log in before you can comment on or make changes to this bug.
Description popov895 2022-06-16 11:05:50 UTC
Created attachment 149782 [details]
Window title without tinted color

SUMMARY

If the color scheme doesn't define header colors and uses the tinted color feature,, then the window title isn't tinted.

STEPS TO REPRODUCE

1. Apply a color scheme that doesn't define header colors, but uses the tinted color feature
2. Apply any accent color

OBSERVED RESULT

Window title isn't tinted.

EXPECTED RESULT

Window title is tinted.

SOFTWARE/OS VERSIONS

Operating System: openSUSE Tumbleweed 20220613
KDE Plasma Version: 5.25.0
KDE Frameworks Version: 5.94.0
Qt Version: 5.15.2
Graphics Platform: X11
Comment 1 popov895 2022-06-16 11:06:47 UTC
Created attachment 149783 [details]
Color scheme without header and with tinted color feature
Comment 2 popov895 2022-06-16 11:07:40 UTC
Created attachment 149784 [details]
kdeglobals
Comment 3 Nate Graham 2022-06-16 19:51:15 UTC
Will be fixed by https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1844.
Comment 4 Nate Graham 2022-06-17 20:12:18 UTC
Fixed by Jan Blackquill with https://invent.kde.org/plasma/plasma-workspace/-/commit/a671178a8f35b87d385bce9cfcf72603da25f586 in Plasma 5.25.1!
Comment 5 popov895 2022-06-21 17:20:16 UTC
Still not fixed.
Comment 6 Bug Janitor Service 2022-06-22 09:15:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1865
Comment 7 Nate Graham 2022-06-22 19:27:08 UTC
Git commit 2d272745eb0ec6da96b45ea66842cba7a3e69f21 by Nate Graham, on behalf of Eugene Popov.
Committed on 22/06/2022 at 19:27.
Pushed by ngraham into branch 'master'.

kcms/colors: Fix window titlebar tinting in colorsapplicator

Tint the window titlebars even if the option to make them accent-colored is not
explicitly enabled; in this case you want them tinted anyway because they're a
part of the fill window which will get tinted.
FIXED-IN: 5.25.2

M  +4    -6    kcms/colors/colorsapplicator.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/2d272745eb0ec6da96b45ea66842cba7a3e69f21
Comment 8 Nate Graham 2022-06-22 19:47:52 UTC
Git commit b6b34f14901d8e493be4caa7f54c2dd36a2f0b46 by Nate Graham, on behalf of Eugene Popov.
Committed on 22/06/2022 at 19:47.
Pushed by ngraham into branch 'Plasma/5.25'.

kcms/colors: Fix window titlebar tinting in colorsapplicator

Tint the window titlebars even if the option to make them accent-colored is not
explicitly enabled; in this case you want them tinted anyway because they're a
part of the fill window which will get tinted.
FIXED-IN: 5.25.2


(cherry picked from commit 2d272745eb0ec6da96b45ea66842cba7a3e69f21)

M  +4    -6    kcms/colors/colorsapplicator.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/b6b34f14901d8e493be4caa7f54c2dd36a2f0b46
Comment 9 Nate Graham 2022-07-05 18:01:19 UTC
*** Bug 456321 has been marked as a duplicate of this bug. ***
Comment 10 Nate Graham 2022-07-05 18:10:01 UTC
Git commit 00a18a8c5aeb6c0b4e2b157dec11e4e1032d20cd by Nate Graham, on behalf of Eugene Popov.
Committed on 05/07/2022 at 18:09.
Pushed by ngraham into branch 'master'.

kcms/colors: Properly apply tinting to the window titlebar

Tint the window titlebars only when either the option to tint all colors with
accent color or the option to apply accent color to window titlebars is enabled 
or both), and in the latter case, the active window titlebars should be painted
in the accent color.
Related: bug 454047
FIXED-IN: 5.25.3

M  +16   -7    kcms/colors/colorsapplicator.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/00a18a8c5aeb6c0b4e2b157dec11e4e1032d20cd
Comment 11 Nate Graham 2022-07-05 18:10:27 UTC
Git commit 9f46232368583ef97d617782ee29f9eabd20eda8 by Nate Graham, on behalf of Eugene Popov.
Committed on 05/07/2022 at 18:10.
Pushed by ngraham into branch 'Plasma/5.25'.

kcms/colors: Properly apply tinting to the window titlebar

Tint the window titlebars only when either the option to tint all colors with
accent color or the option to apply accent color to window titlebars is enabled 
or both), and in the latter case, the active window titlebars should be painted
in the accent color.
Related: bug 454047
FIXED-IN: 5.25.3


(cherry picked from commit 00a18a8c5aeb6c0b4e2b157dec11e4e1032d20cd)

M  +16   -7    kcms/colors/colorsapplicator.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/9f46232368583ef97d617782ee29f9eabd20eda8