kcms/colors: Fix window titlebar tinting in colorsapplicator

Tint the window titlebars even if the option to make them accent-colored is not
explicitly enabled; in this case you want them tinted anyway because they're a
part of the fill window which will get tinted.

BUG: 455395
FIXED-IN: 5.25.2